impact view function

--- a/templates/reforest/home.html
+++ b/templates/reforest/home.html
@@ -54,7 +54,8 @@
             </div>
           </div>
 
-          
+          <span class="fw-bold fs-3">{{ total_trees }}</span>
+          <span class="fw-bold fs-3">{{ total_trees_accounted }}</span>
           <div  class="container col-xxl-12 mt-1">
             <div class="row py-3 g-2">
               <div id="wave" class="card border-success mb-3">               
