--- a/templates/reforest/home.html
+++ b/templates/reforest/home.html
@@ -40,7 +40,6 @@
                   </h1>
                 <p >Join Greenlead and be part of a revolutionary mission to save our planet. Experience a self-funding ecosystem where
                   tree-planting groups thrive, turning their efforts into valuable carbon offsets. 
-                  Together, we can make a difference and create a greener future for generations to come. 
                    See our latest updates on tree planting activities by various groups in Kenya, 
                    our approach in incentivizing their carbon offset activities, our advanced analytics on sustainable 
                    tree-planting practices and how we connect you to your preferred choice of seedlings.
@@ -85,7 +84,6 @@
                 <div>
                   <h3 class="fs-5 fw-bold">Partnerships</h3>
                   <p>Through partnerships, GreenLead accelerates its impact in forestation. By collaborating with organizations, institutions, and industries, we access resources, funding, and wider reach. 
-                    Together, we maximize tree planting, increase carbon offsets, and build a sustainable future. 
                   </p>                 
                 </div>
               </div>
@@ -95,7 +93,7 @@
                   <h3 class="fs-5 fw-bold">Marketing</h3>
                   <p>
                     Through marketing, GreenLead amplifies its mission of reforestation and carbon offsetting. By raising awareness, attracting potential buyers of carbon offsets,
-                    and showcasing our impact, we drive support, funding, and engagement. Join us in spreading the message and creating a greener world.
+                    and showcasing our impact, we drive support, funding, and engagement. 
                   </p>
                 </div>
               </div>
@@ -227,7 +225,7 @@
                       <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
                         <div class="count-box">
                           <i class="bi bi-people"></i>
-                          <span >400</span>
+                          <span >{{ average_percentage }}%</span>
                           <p><strong>Accountability score</strong> for all groups</p>
                         </div>
                       </div>
@@ -275,7 +273,7 @@
 
 
 
-          <div class="container">
+          <div class="container mt-5">
             <div class="row">
               <h2  class="pb-2 border-bottom fw-bold">Agri<span class="root">culture</span></h2>  
               <div class="row row-cols-1 row-cols-md-3 mb-3 text-center mt-2 py-2">
