--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
             <li>
               <a href="{% url 'trend' %}">
                 <i class='bx bxs-bar-chart-alt-2'></i>
-                <span class="links_name">Scores</span>
+                <span class="links_name">Score</span>
               </a>
             </li>
 
