--- a/templates/reforest/home.html
+++ b/templates/reforest/home.html
@@ -193,7 +193,7 @@
                 <section id="facts" class="facts">
                   <div class="container p-2">
 
-                      <p>GreenLead's impact is driven by empowering reforestation efforts and fostering a sustainable future for our planet through collective action. </p>
+                      <p>GreenLead's impact is driven by empowering reforestation and afforestation efforts and fostering a sustainable future for our planet through collective action. </p>
 
                     <div class="row no-gutters">
                       
