--- a/templates/carbon/benefits.html
+++ b/templates/carbon/benefits.html
@@ -20,8 +20,8 @@
                     By registering with us, you gain access to a range of benefits and opportunities that will amplify the impact of your initiatives. Here's why you should join us:
                   </p>
                   <ul class="list-unstyled ">
-                    <li class="m-2"><i class='bx bxs-star fs-5 m-1 fw-bold text-success'></i><strong class="fs-6">Funding Opportunities:</strong>
-                        As a registered group, you become eligible for funding opportunities and incentives based on your performance and impact by companies like Climate Impact Partners, Terraformation, Verra etc.
+                    <li class="m-2"><i class='bx bxs-star fs-5 m-1 fw-bold text-success'></i><strong>Funding Opportunities:</strong>
+                        As a registered group, you become eligible for funding opportunities and incentives based on your performance and impact.
                         Unlock financial support to further accelerate your tree-planting efforts and expand the reach of your projects. 
                     </li>
                     <li class="m-2"><i class='bx bxs-star fs-5 m-1  fw-bold text-success'></i><strong>Increased Visibility:</strong> 
