--- a/templates/forests/difference.html
+++ b/templates/forests/difference.html
@@ -69,7 +69,7 @@
             <thead>
                 <tr>
                    <th>Group name</th>
-                   <th>Number of trees</th>
+                   <th>Difference</th>
                    <th>Percentage</th>
                 </tr>
             </thead>
