--- a/templates/reforest/home.html
+++ b/templates/reforest/home.html
@@ -226,7 +226,7 @@
                         <div class="count-box">
                           <i class="bi bi-people"></i>
                           <span >{{ average_percentage }}%</span>
-                          <p><strong>Accountability score</strong> for all groups</p>
+                          <p><strong>Accountability score</strong> for all groups combined</p>
                         </div>
                       </div>
 
