--- a/templates/forests/pdf_template.html
+++ b/templates/forests/pdf_template.html
@@ -109,8 +109,8 @@
         
         <div class="col-12 mt-3 ">
             <p class="paragraph">
-                This document contains information as filled our by reforestation and afforestation groups and approved by #GreenLead. The document can be accessed by the public but can <strong>ONLY</strong> be used by GreenLead for other official businesses.
-                The information here is of updated periodic records ( 2 month intervals ) of groups conducting tree-planting activities as our bigger mission towards fostering for accountability in those tree-planting initiatives.
+                This document contains information as filled our by environmental groups registered and approved by #GreenLead. The document can be accessed by the public but can <strong>ONLY</strong> be used by GreenLead for other official businesses.
+                The information here is of updated periodic records ( 2 month intervals ) of environmental groups conducting tree-planting activities as our bigger mission towards fostering for accountability in tree-planting initiatives.
             </p>
         
        </div>
