--- a/templates/reforest/main_pdf_template.html
+++ b/templates/reforest/main_pdf_template.html
@@ -2,6 +2,8 @@
 
 {% load bootstrap5 %}
 
+{% load humanize %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -110,11 +112,11 @@
             <p class="paragraph">
                At GreenLead we look to achieve sustainability through accountability. This can only be achieved if groups running tree-planting programs can be responsible and accountable for what their activities.
                We have shifted the focus from <i>how many trees we plant today, to how many of those trees survive tommorow</i>. By incentivizing groups, running reforestation and afforestation programs, we are going to ensure 
-               they all are responsible for what they do. Register with us, create a good portfolio for your group and get rewarded for your carbon offsetting activity.
+               they all are responsible for what they do. Register with us, create a good portfolio for your environmental group and get rewarded for your carbon offsetting activity.
             </p>
 
             <p class="paragraph">
-                This document contains information as filled our by reforestation and afforestation groups and approved by #GreenLead. The document can be accessed by the public but can <strong>ONLY</strong> be used by GreenLead for other official businesses.
+                This document contains information as filled our by environmental groups registered and approved by #GreenLead. The document can be accessed by the public but can <strong>ONLY</strong> be used by GreenLead for other official businesses.
               
             </p>
         
