--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 
     <div class="sidebar">
         <div id="greenwatch-logo" class="logo-details">
-          <img src="{% static 'img/share.jpg' %}" alt="" class="bi me-2" width="55" height="55" role="img" >
+          <img src="{% static 'img/GL2.jpg' %}" alt="" class="bi me-2" width="55" height="55" role="img" >
             <a href="{% url 'home' %}" style="text-decoration: none;">
               <span class="logo_name fw-bold">GreenLead</span>
             </a>
@@ -53,7 +53,7 @@
             <li>
               <a href="{% url 'trend' %}">
                 <i class='bx bxs-bar-chart-alt-2'></i>
-                <span class="links_name">Score</span>
+                <span class="links_name">Accountability <br>Score</span>
               </a>
             </li>
 
