--- a/templates/forests/difference_pdf.html
+++ b/templates/forests/difference_pdf.html
@@ -111,11 +111,11 @@
         <div class="col-12 mt-3 ">
             <p class="paragraph">
                 At GreenLead, our primary objective is to achieve <strong>sustainability through accountability</strong>. That's why we have developed a unique accountability scoring system for tree-planting activities. 
-                This scoring system measures the <em>difference</em> between a group's initial entry record and their latest update record for the same activity, calculating a <em>percentage</em> that reflects their level of accountability. 
-                The higher the percentage, the higher the score, indicating areas such as responsibility, credibility, integrity, and improvement opportunities for the group.
+                This scoring system measures the <em>difference</em> between the initial entry record and their latest update record for the same activity, calculating a <em>percentage</em> that reflects their level of accountability. 
+                The higher the percentage, the higher the score, indicating areas such as responsibility, credibility, integrity, and improvement opportunities.
             </p>
             <p class="paragraph">
-                This document contains information as filled our by reforestation and afforestation groups and approved by #GreenLead. The document can be accessed by the public but can <strong>ONLY</strong> be used by GreenLead for other official businesses.
+                This document contains information as filled our by environmental groups, organizations and companies approved by #GreenLead. The document can be accessed by the public but can <strong>ONLY</strong> be used by GreenLead for other official businesses.
         
        </div>
     </div>
