--- a/templates/reforest/index.html
+++ b/templates/reforest/index.html
@@ -59,7 +59,7 @@
     <div class="sales-boxes responsive">
       <div class="recent-sales box">
         <div class="title">Recent data</div>
-        <p class="m-3">Under <strong>name</strong> category, enter the name of your group and the county you carried out your tree-planting initiative like <strong>Group A - Nairobi county</strong>
+        <p class="m-3">Under <strong>name</strong> category, enter the name of your group, company or organization and the county you carried out your tree-planting initiative like <strong>Group A - Nairobi county</strong>
           If you are making more than one entry for your group, indicate the round of entry in <strong>(..)</strong> after the county name i.e <strong>Group A - Nairobi county (round 1)</strong> </p>
 
 
