--- a/templates/reforest/main_pdf_template.html
+++ b/templates/reforest/main_pdf_template.html
@@ -116,7 +116,7 @@
             </p>
 
             <p class="paragraph">
-                This document contains information as filled our by environmental groups registered and approved by #GreenLead. The document can be accessed by the public but can <strong>ONLY</strong> be used by GreenLead for other official businesses.
+                This document contains information as filled our by environmental groups, organizations and companies registered and approved by #GreenLead. The document can be accessed by the public but can <strong>ONLY</strong> be used by GreenLead for other official businesses.
               
             </p>
         
