--- a/templates/forests/index.html
+++ b/templates/forests/index.html
@@ -14,7 +14,7 @@
             <p class="summary-intro">
                 Do we replace those trees that dry up or get damaged after a short period of being planted ?? <br>
                  <br>
-                Update this section in reference to its corresponding intial entry in the <strong>Main Dashboard</strong> section after every 2 months. This will enable us
+                Update this section in reference to its corresponding intial entry in the <strong>Main Dashboard</strong> section after every <strong>2 months</strong>. This will enable us
                 to conduct analysis on survival rates of trees planted and come up with possible sustainable solutions in ensuring
                 the survival rate is optimal.
             </p>
