--- a/templates/reforest/home.html
+++ b/templates/reforest/home.html
@@ -38,7 +38,7 @@
                   <h1 class=" fw-bold lh-1 mb-3"> 
                     <span class="releaf">Re-leaf</span>  <img src="{% static 'img/leaff.jpg' %}" alt="" class="bi mt-4" width="65" height="37" role="img" > with accountability for sustainability
                   </h1>
-                   <p>Join Greenlead and be part of a revolutionary mission to save our planet. Experience an open-data platform where
+                   <p>Join Greenlead and be part of a revolutionary mission to save our planet. Experience a reporting and verification open-data platform where
                     environmental groups thrive, enhance their visibility and turn their tree-planting activities into valuable carbon offsets. 
                      See our latest updates on tree planting activities by various environmental groups in Kenya, 
                      our approach in incentivizing their carbon offset activities, our advanced analytics on sustainable 
@@ -59,10 +59,10 @@
               <div id="wave" class="card border-success mb-3">               
                 <div class="card-body">
                   <h4 id="title" class="card-title mb-2"></h4>
-                  <p> <span class=" fw-bold releaf1">GreenLead</span> offers the platform for environmental groups to be accountable in their tree planting initiatives by monitoring
-                    their activities and providing regular updates on their tree planting initiative. We strive to incentivize their carbon offsetting efforts by introducing them to the carbon markets, 
-                    earn and trade on the carbon credits they generate. This provides financial incentives for their reforestation & afforestation activities and as project developers they can generate 
-                    revenue that can be re-invested in sustaining and expanding their reforestation/afforestation efforts.
+                  <p> <span class=" fw-bold releaf1">GreenLead</span> offers the platform for environmental groups, companies and organizations to report, monitor 
+                     and provide regular updates on their tree planting initiative. We strive to incentivize their carbon offsetting efforts by introducing them to the carbon markets, 
+                    earn and trade on the carbon credits they generate. This provides financial incentives for their reforestation & afforestation activities and project developers can generate 
+                    revenue that can be re-invested in sustaining and expanding their reforestation/afforestation efforts. And for companies and organizations, this approach enhances their corporate social responsibility (CSR).
                      
                   </p>
                   <p>Through our robust reporting system to monitor the ongoing performance of your carbon offset projects, we are able to calculate the estimated carbon sequestration capacity of these trees based on factors such as species, age, and growth rates.
